Add fonts and connect it to HTML.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./css/normalize.min.css">
+	<link rel="stylesheet" href="./css/styles.css">
 	<title>Scoot</title>
 </head>
 <body>
-	
+	<header class="site-header">
+		<nav class="sitenav">
+			<div class="sitenav__container container">
+
+				<a class="sitenav__link link--logo" href="#">
+					<img class="sitenav__logo" src="./images/scoot-logo-dark.svg" alt="Scoot site logo" width="107" height="28">
+				</a>
+
+				<ul class="sitenav__list">
+
+					<li class="sitenav__item">
+						<a class="sitenav__link" href="#">About</a>
+					</li>
+
+					<li class="sitenav__item">
+						<a class="sitenav__link" href="#">Location</a>
+					</li>
+
+					<li class="sitenav__item">
+						<a class="sitenav__link" href="#">Careers</a>
+					</li>	
+
+				</ul>
+
+				<a class="sitenav__button sitenav__button--bordered" href="#">Get Scooting</a>
+
+			</div>
+		</nav>
+	</header>
 </body>
 </html>
