Finalize site-header.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,20 @@
 
 				</ul>
 
-				<a class="sitenav__button sitenav__button--bordered" href="#">Get Scooting</a>
+				<a class="sitenav__button sitenav__button--bordered">Get Scooting</a>
 
 			</div>
 		</nav>
 	</header>
+
+
+	<main class="main">
+		
+		<section class="scooter-sharing">
+			<div class="container">
+				
+			</div>
+		</section>
+	</main>
 </body>
 </html>
