Add scooter-sharing section.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 	<title>Scoot</title>
 </head>
 <body>
+
+
+	<!-- SITE-HEADER -->
 	<header class="site-header">
+
+
 		<nav class="sitenav">
 			<div class="sitenav__container container">
 
-				<a class="sitenav__link link--logo" href="#">
+				<a class="sitenav__link link--logo" href="/">
 					<img class="sitenav__logo" src="./images/scoot-logo-dark.svg" alt="Scoot site logo" width="107" height="28">
 				</a>
 
@@ -36,16 +41,32 @@
 
 			</div>
 		</nav>
+
+
 	</header>
 
 
+	<!-- MAIN -->
 	<main class="main">
 		
+
+		<!-- SCOOTER-SHARING SECTION -->
 		<section class="scooter-sharing">
 			<div class="container">
 				
+				<div class="scooter-sharing__info-wrapper">
+
+					<h1 class="scooter-sharing__heading">Scooter sharing made simple</h1>
+
+					<p class="scooter-sharing__desc">Scoot takes the hassle out of urban mobility. Our bikes are placed in convenient locations in each of our cities. Use our app to locate the nearest bike, unlock it with a tap, and you’re away!</p>
+
+					<a class="scooter-sharing__button">Get Scooting</a>
+
+				</div>
+
 			</div>
 		</section>
+
 	</main>
 </body>
 </html>
