Add join-us section and their styles to CSS

--- a/index.html
+++ b/index.html
@@ -67,6 +67,36 @@
 			</div>
 		</section>
 
+		<!-- JOIN-US SECTION -->
+		<section class="join-us">
+			<div class="join-us__container container">
+				
+				<h2 class="visually-hidden">Join us now!</h2>
+				<span class="join-us__horizontal-line"></span>
+				<ul class="join-us__list">
+
+					<li class="join-us__item">
+						<h3 class="join-us__heading join-us__heading--first">Locate with app</h3>
+						<p class="join-us__desc">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </p>
+					</li>
+
+					<li class="join-us__item">
+						<h3 class="join-us__heading join-us__heading--second">Pick your scooter</h3>
+						<p class="join-us__desc">We show the most important info for the scooters closest to you. So you know how much charge they have left and can see roughly how much it will cost.</p>
+					</li>
+
+					<li class="join-us__item">
+						<h3 class="join-us__heading join-us__heading--third">Enjoy the ride</h3>
+						<p class="join-us__desc">Scan the QR code and the bike will unlock. Retract the cable lock, put on a helmet, and you’re off! Always lock bikes away from walkways and accessibility ramps.</p>
+					</li>
+
+				</ul>
+
+			</div>
+		</section>
+
+
+
 	</main>
 </body>
 </html>
