Add Features for homepage of the site.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/normalize.min.css">
 	<link rel="stylesheet" href="./css/styles.css">
-	<title>Scoot</title>
+	<title>Scoot </title>
 </head>
 <body>
 
@@ -24,15 +24,15 @@
 				<ul class="sitenav__list">
 
 					<li class="sitenav__item">
-						<a class="sitenav__link" href="#">About</a>
+						<a class="sitenav__link" href="./about.html">About</a>
 					</li>
 
 					<li class="sitenav__item">
-						<a class="sitenav__link" href="#">Location</a>
+						<a class="sitenav__link" href="./location.html">Location</a>
 					</li>
 
 					<li class="sitenav__item">
-						<a class="sitenav__link" href="#">Careers</a>
+						<a class="sitenav__link" href="./careers.html">Careers</a>
 					</li>	
 
 				</ul>
@@ -97,6 +97,43 @@
 
 
 
+		<!-- FEATURES -->
+		<section class="features">
+			<div class="container">
+				
+				<ul class="features__list">
+					
+					<li class="features__item features__item--first">
+						<div class="features__item__info features__item__info--first">
+							<h2 class="features__heading">Easy to use riding telemetry</h2>
+							<p class="features__desc">The Scoot app is available with riding telemetry. This means it can show you your average speed, how long you've been using the scooter, your traveling distance, and many more things all in an easy to use app.</p>
+							<a class="features__link" href="#">Learn More</a>
+						</div>
+					</li>
+
+					<li class="features__item features__item--second ">
+						<div class="features__item__info features__item__info--second">
+							<h2 class="features__heading">Coming to a city near you</h2>
+							<p class="features__desc">Scoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming year.</p>
+							<a class="features__link" href="#">Learn More</a>
+						</div>
+					</li>
+
+					<li class="features__item features__item--third">
+						<div class="features__item__info features__item__info--third">
+							<h2 class="features__heading">Zero hassle payments</h2>
+							<p class="features__desc">Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a month.</p>
+							<a class="features__link" href="#">Learn More</a>
+						</div>
+					</li>
+				</ul>
+
+			</div>
+		</section>
+
+		
 	</main>
+
+
 </body>
 </html>
