Add Questions section for ABOUT page.

--- a/about.html
+++ b/about.html
@@ -85,7 +85,41 @@
 
 
 
+		<!-- VALUES -->
+		<section class="values">
+			<div class="container">
 
+				<h2 class="values__heading">Our values</h2>
+
+				<ul class="values__list">
+
+					<li class="values__item values__item--first">
+						<div class="values__info">
+							<h3 class="values__info__heading values__info__heading--first">Our tech</h3>
+							<p class="values__info__desc">We’re using cutting edge technology to drive accessible urban transportation forward. Our fully electric scooters are a joy to ride!</p>
+						</div>
+					</li>
+
+					<li class="values__item values__item--second">
+						<div class="values__info">
+							<h3 class="values__info__heading values__info__heading--second">Our integrity</h3>
+							<p class="values__info__desc">We are fully committed to deliver a great yet safe, sustainable micro-mobility experience in every city we serve.</p>
+						</div>
+					</li>
+
+					<li class="values__item values__item--third">
+						<div class="values__info">
+							<h3 class="values__info__heading values__info__heading--third">Our community</h3>
+							<p class="values__info__desc">We support every community we serve. All workers are paid a living wage based on their location and are Scoot employees.</p>
+						</div>
+					</li>
+
+				</ul>
+			</div>
+		</section>
+
+
+		
 	</main>
 
 
