Add FAQ section for HTML and CSS files.

--- a/about.html
+++ b/about.html
@@ -119,7 +119,81 @@
 		</section>
 
 
-		
+		<!-- QUESTIONS	 -->
+
+		<section class="questions">
+			<div class="container">
+
+				<h2 class="questions__heading">FAQs</h2>
+				<!-- HOW TO USE PART -->
+				<div class="how-to-use">
+
+					<h3 class="how-to-use__heading">How it works</h3>
+
+					<ul class="how-to-use__list">
+
+
+						<li class="how-to-use__item">
+							<div class="how-to-use__info">
+								<h4 class="how-to-use__info__heading">How do I download app?</h4>
+								<p class="how-to-use__info__desc">To download the Scoot app, you can search “Scoot” in both the App and Google Play stores. An even simpler way to do it would be to click the relevant link at the bottom of this page and you’ll be re-directed to the correct page.</p>
+							</div>
+						</li>
+
+						<li class="how-to-use__item">
+							<div class="how-to-use__info">
+								<h4 class="how-to-use__info__heading">Can I find a nearby Scoots?</h4>
+							</div>
+						</li>
+
+						<li class="how-to-use__item">
+							<div class="how-to-use__info">
+								<h4 class="how-to-use__info__heading">Do I need a license to ride?</h4>
+								
+							</div>
+						</li>
+
+
+					</ul>
+
+				</div>
+
+
+				<!-- SAFE DRIVING PART -->
+				<div class="safe-driving">
+
+					<h3 class="safe-driving__heading">Safe driving</h3>
+
+					<ul class="safe-driving__list">
+
+
+						<li class="safe-driving__item">
+							<div class="safe-driving__info">
+								<h4 class="safe-driving__info__heading">Should I wear a helmet?</h4>
+								<p class="safe-driving__info__desc">Yes, please do! All cities have different laws. But we strongly strongly strongly recommend always wearing a helmet regardless of the local laws. We like you and we want you to be as safe as possible while Scooting.</p>
+							</div>
+						</li>
+
+						<li class="safe-driving__item">
+							<div class="safe-driving__info">
+								<h4 class="safe-driving__info__heading">How about the rules & regulations?</h4>
+							</div>
+						</li>
+
+						<li class="safe-driving__item">
+							<div class="safe-driving__info">
+								<h4 class="safe-driving__info__heading">What if I damage my Scoot?</h4>
+								
+							</div>
+						</li>
+
+
+					</ul>
+
+				</div>
+
+			</div>
+		</section>
 	</main>
 
 
